# swapk-exam

./: .gitignore  CMakeLists.txt  CPP_FEATURES.md  Controller.cpp  Controller.hpp  Job.cpp  Job.hpp  Machine.cpp  Machine.hpp  MachineConepts.hpp  RawMaterial.cpp  RawMaterial.hpp  RoboticArm.cpp  RoboticArm.hpp  Shared.hpp  main.cpp
Machines/: CNCMachine.hpp  Cutter.hpp  MachineTraits.hpp
Machines/Core/: MachineBase.hpp  Mover.cpp  Mover.hpp  Producer.hpp  ResourceStation.cpp  ResourceStation.h
Materials/: AnyMaterial.hpp
